Headless: Use persistent cookie storage

Bug: 775261
Change-Id: Ia0af1a184a5780c214be7607fdbd40a5a914d295
Reviewed-on: https://chromium-review.googlesource.com/719612
Reviewed-by: David Vallet <dvallet@chromium.org>
Commit-Queue: Joel Einbinder <einbinder@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509347}
Former-commit-id: 841320ae52ada38ec868d1a824bdb2bbe8754ccf